@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: lbxutil
 Description: LBX Utilities
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @LBXUTIL_CFLAGS@
-Libs: -L${libdir} -llbxutil @LBXUTIL_LIBS@
+Cflags: -I${includedir}
+Libs: -L${libdir} -llbxutil
+Libs.private: -lz
